Allow mid-word breaks in long search result titles

Bug: 900278
Test: manual, see bug
Change-Id: Ic6b94576aae51743ef1399c22395e126505148de
Reviewed-on: https://chromium-review.googlesource.com/c/1401069
Reviewed-by: Alex Newcomer <newcomer@chromium.org>
Commit-Queue: Vladislav Kaznacheev <kaznacheev@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620899}
Former-commit-id: 1b740da684bad1c11a4ebcbb0fe9a6daaa317457